--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
 # Required metadata
-sonar.projectKey=rosalind
-sonar.projectName=rosalind
+sonar.projectKey=ntsparksearch
+sonar.projectName=ntsparksearch
 sonar.projectVersion=1.0.0
 sonar.language=py
-sonar.sources=rosalind/
-sonar.binaries=dist/
-sonar.projectBaseDir=./rosalind/
+sonar.sources=ntsparksearch/
+sonar.projectBaseDir=./ntsparksearch
 sonar.python.coverage.reportPath=coverage.xml
