--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pymongo >= 3.4.0
-biopython >= 1.68
-progressbar2 >= 3.11
-findspark >= 1.1.0
-xlrd >= 1.0.0
-flask >= 0.12.1
-rq >= 0.6.0
-redis >= 2.10.5
-Flask-RQ2 >= 17.0
-Flask-Cors >= 3.0.2
+pymongo == 3.4.0
+biopython == 1.68
+progressbar2 == 3.11
+findspark == 1.1.0
+xlrd == 1.0.0
+flask == 0.12.1
+rq == 0.6.0
+redis == 2.10.5
+Flask-RQ2 == 17.0
+Flask-Cors == 3.0.2
